# StoryForge

./: .clippy.toml  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AUDIT_GAP_REPORT_v5.1.md  BROOKS_SWEEP_OPTIMIZATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_v5.1.1.md  CONTEXT-MAP.md  Cargo.toml  KIMI.md  PERFORMANCE_FIX_PLAN.md  PLAN_Alignment_v5.1.md  PROJECT_STATUS.md  QA-Stage1-report.md  QA-Stage2-report.md  QA-Stage3-report.md  README.md  ROADMAP.md  TESTING.md  build-log.txt  build-log2.txt  build-release-log.txt  compile_errors.txt  package-lock.json  package.json  playwright.config.ts  rustfmt.toml  tmp_write_plan.py
src-tauri/: Cargo.toml  errors.txt  fix_agents_auto.py  fix_all_errors.py  fix_auth_cmds.py  fix_book_deconstruction.py  fix_chat.py  fix_collab.py  fix_config_cmds.py  fix_internal_modules.py  fix_remaining_10.py  fix_remaining_cmds.py  fix_subscription.py  fix_subscription_cmds.py  list_error_files.py  parse_errors.py  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main-capability.json
src-tauri/src/: CONTEXT.md  commands_pipeline.rs  commands_v3.rs  creation_commands.rs  diagnostics.rs  error.rs  events.rs  handlers.rs  intent.rs  lib.rs  logging.rs  mock-tauri.js  revision_commands.rs  scene_commands.rs  story_commands.rs  studio_commands.rs  workflow_logger.rs
src-tauri/src/agents/: commands.rs  commentator.rs  context_optimizer.rs  distiller.rs  executor.rs  inspector.rs  memory_compressor.rs  mod.rs  novel_creation.rs  orchestrator.rs  service.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/anti_ai/: mod.rs  rewriter.rs
src-tauri/src/audit/: commands.rs  mod.rs  opening_clarity.rs
src-tauri/src/auth/: commands.rs  mod.rs  oauth.rs  session.rs
src-tauri/src/automation/: commands.rs  handlers.rs  mod.rs  service.rs  triggers.rs
src-tauri/src/book_deconstruction/: analyzer.rs  chunker.rs  commands.rs  executor.rs  models.rs  repository.rs  service.rs
src-tauri/src/canonical_state/: manager.rs  tests.rs
src-tauri/src/capabilities/: evolution.rs  mod.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/collab/: mod.rs  ot.rs  websocket.rs
src-tauri/src/commands/: ai_op.rs  anti_ai.rs  audit.rs  chapter.rs  character.rs  core.rs  export.rs  genre.rs  intent.rs  mcp.rs  memory.rs  mod.rs  narrative.rs  orchestrator.rs  pipeline.rs  reading_power.rs  skill.rs  story.rs  story_system.rs  strategy.rs  sync.rs  utils.rs  vector.rs  workflow.rs
src-tauri/src/config/: commands.rs  settings.rs  settings_tests.rs  studio_manager.rs
src-tauri/src/creative_engine/: adapter.rs  asset_capability_manifest.rs  context_builder.rs  continuity.rs  foreshadowing.rs  mod.rs  payoff_ledger.rs  write_time_bundle.rs
src-tauri/src/db/: connection.rs  dto.rs  migrations.rs  mod.rs  models.rs  models_change_track.rs  models_knowledge.rs  models_pipeline.rs  models_scene.rs  models_story.rs  models_studio.rs  models_user.rs  models_v3.rs  models_world.rs  repositories.rs  repositories_export.rs  repositories_narrative.rs  repositories_narrative_events.rs  repositories_narrative_events.rs.bak  repositories_pipeline.rs  repositories_story_system.rs  repositories_tests.rs  repositories_v3.rs  traits.rs
src-tauri/src/domain/: adaptive.rs  agent_service.rs  asset_snapshot.rs  continuity.rs  creative_engine.rs  foreshadowing.rs  mod.rs  narrative_elements.rs  prompt_synthesis.rs  search.rs  style.rs  write_time_bundle.rs
src-tauri/src/embeddings/: embedding.rs  provider.rs
src-tauri/src/evolution/: analyzer.rs  reviewer.rs  updater.rs
src-tauri/src/export/: epub.rs  mod.rs  pdf.rs
src-tauri/src/intention_graph/: asset_sync.rs  builder.rs  commands.rs  context.rs  discovery.rs  graph.rs  mod.rs  models.rs  planner.rs  reactor.rs  scorer.rs  tests.rs
src-tauri/src/knowledge_base/: commands.rs  mod.rs
src-tauri/src/llm/: adapter.rs  anthropic.rs  commands.rs  ollama.rs  openai.rs  prompt.rs  service.rs
src-tauri/src/mcp/: client.rs  server.rs  transport.rs
src-tauri/src/memory/: health_daemon.rs  hybrid_search.rs  ingest.rs  mod.rs  multi_agent.rs  orchestrator.rs  query.rs  retention.rs  tokenizer.rs  writer.rs
src-tauri/src/model_gateway/: benchmark.rs  capability_store.rs  commands.rs  dispatcher.rs  executor.rs  health.rs  mod.rs  registry.rs  scheduler.rs  types.rs  upgrader.rs
src-tauri/src/narrative/: analysis.rs  audit.rs  chunker.rs  elements.rs  event.rs  genesis.rs  health.rs  intensity_mapper.rs  litseg_pipeline.rs  mod.rs  pipeline.rs  progress.rs  (+7 more)
(+441 files in other folders)
