[package]
name = "storyforge"
version = "7.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.4", features = [] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.33", features = ["bundled"] }
once_cell = "1.19"
reqwest = { version = "=0.12.4", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
regex = "1.11"
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
serde_yaml = "0.9"
walkdir = "2"
notify = "8.0"

# MCP (Model Context Protocol)
rmcp = { version = "0.8", features = ["server", "client"] }

# PDF generation
printpdf = "0.7"

# EPUB generation
epub-builder = "0.7"

# File system
dirs = "5"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-appender = "0.2"
tracing-log = "0.2"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"

# LanceDB - 向量数据库(v5.4.0 启用)
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"

# ZIP file handling (配置导出)
zip = "0.6"

# Template engine for custom export templates
tera = "1.20"

# Cron expression parsing (v5.5.1 - P1-13 修复)
cron = "0.15"

# Book deconstruction - file parsing
pdf-extract = "0.7"
epub = "2.1"
encoding = "0.2"

# File hashing
sha2 = "0.10"
hex = "0.4"

# Authentication
oauth2 = { version = "5.0", features = ["reqwest"] }
jsonwebtoken = "9"
argon2 = "0.5"

# Tauri plugins (v2.x)
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"

# TypeScript type generation from Rust types (Phase 1.1)
ts-rs = { version = "9", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3"
tauri = { version = "2.4", features = ["test"] }
# v5.7 bugfix exploration PBTs (Task 1)
proptest = "1"
serial_test = "3"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.36"

[features]
default = ["custom-protocol"]
custom-protocol = []

[lib]
name = "storyforge_lib"
crate-type = ["lib", "cdylib"]
